# xlwings-server

./: .dockerignore  .env.template  .funcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  TODO.md  apprunner.yaml  docker-compose.prod.yaml  docker-compose.socketio.yaml  docker-compose.yaml  function_app.py  host.json  make_static.py  manifest.xml  nginx-default.conf  package-lock.json  package.json  prettierrc.yaml  pyproject.toml  render.yaml  requirements-core-win.txt  requirements-core.in  requirements-core.txt  requirements-dev-win.txt  requirements-dev.in  requirements-dev.txt  requirements-win.txt  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  semgrep.yml  xlwings-ci.yml  xlwings-codeql.yml  xlwings-docker-dev.yml  xlwings-docker.yml  xlwings-semgrep.yml  xlwings-server-AutoDeployTrigger-f5e00418-9c6c-4441-945e-603199438eae.yml
app/: caching.py  cli.py  config.py  database.py  databases.py  dependencies.py  hotreload.py  image_handles.py  main.py  object_handles.py  security_headers.json  templates.py  utils.py
app/auth/: entraid.py  jwks.py  models.py
app/auth/anonymous/: __init__.py
app/auth/custom/: __init__.py
app/auth/entraid/: __init__.py  jwks.py
app/custom_functions/: __init__.py  examples.py  sample.py
app/custom_scripts/: __init__.py  examples.py
app/lite/: config.py  main.py  main2.py  requirements.txt
app/lite/custom_scripts/: __init__.py  examples.py
app/models/: __init__.py  user.py
app/routers/: examples.py  macros.py  manifest.py  root.py  socketio.py  socketio_router.py  taskpane.py  xlwings.py  xlwings_router.py
app/routers/macros/: __init__.py  examples.py  router.py
app/scripts/: edit_manifest.py  parse_manifest.py
app/serializers/: __init__.py  default_serializer.py  dictionary_serializer.py  framework.py  helpers.py  numpy_serializer.py  pandas_serializer.py
app/static/: custom_functions.py  custom_scripts.py  main.py  pyscript.json  xlwings-0.0.0-py3-none-any.whl
app/static/css/: core.css  htmx.css  style.css
app/static/frontend/: package-lock.json  package.json  vite.config.js
app/static/js/: alpinejs-behaviors.js  alpinejs-data.js  alpinejs-handlers.js  alpinejs-models.js  auth-entraid.js  auth-placeholder.js  auth.js  examples.js  hotreload.js  htmx-behaviors.js  htmx-handlers.js  init.js  main.js  ribbon.js  socketio-handlers.js  xlwings-alert.js
app/static/python/: main.py
app/templates/: _book.html  alert_base.html  base.html  manifest.xml  react_taskpane.html  taskpane.html  taskpane1.html  taskpane2.html  xlwings-alert.html  xlwings_alert.html
app/templates/examples/: hello_world_taskpane.html
app/wasm/: config.py  main.py  pyscript.json  xlwings.env
deployment/: docker-compose.prod-min.yaml  docker-compose.prod.yaml
docker/: docker-compose.prod-min.yaml  docker-compose.prod.yaml
docs/: alpinejs.md  alternatives.md  api_coverage.md  auth_entraid.md  auth_providers.md  auth_taskpane.md  authentication.md  authorization.md  aws_app_runner.md  azure_container_apps.md  azure_functions.md  bootstrap.md  changelog.md  client_configuration.md  clients.md  conf.py  custom_functions.md  custom_scripts.md  debugging.md  dependencies.md  deployment.md  dev_certificates.md  dev_docker.md  dev_environment.md  dev_server.md  devcontainers.md  docker_compose.md  examples.md  excel_integration_config.md  excel_integrations.md  features.md  github_codespaces.md  gitpod.md  googleappscript_client.md  googleappsscript_client.md  googleappsscript_integration.md  htmx.md  index.md  index_authentication.md  index_deployment.md  (+53 more)
docs/_static/: custom.css  plausible.js
docs/_templates/: base.html
nginx/: nginx-apppath.conf  nginx-prod.conf  nginx-socketio.conf
requirements/: core-requirements-win.txt  core-requirements.in  core-requirements.txt  dev-requirements-win.txt  dev-requirements.in  dev-requirements.txt  requirements-win.txt  requirements.in  requirements.txt
scripts/: build_static_files.py  clear_office_cache_macos.sh  copy_node_modules_to_static_folder.py  mirror_officejs.py  officejs_inventory.py  postinstall.py  start.sh
testing/: object_handles.md
tests/: .env.lite  .env.test  .env.test2  .env.testlite  .env.testwasm  .env2.test  conftest.py  docker-compose.apppath.yaml  docker-compose.redis.yaml  docker-compose.socketio.yaml  e2e_custom_functions.py  e2e_custom_functions.xlsx  e2e_custom_scripts.py  object_handles.md  test_auth.py  test_auth_entraid.py  test_caching.py  test_custom_functions.py  test_custom_headers.py  test_custom_scripts_args.py  test_dependencies.py  test_env2.py  test_examples.py  test_extra_headers.py  test_lifespan.py  test_log_sanitization.py  test_object_handles.py  test_obo.py  test_router_manifest.py  test_router_taskpane.py  test_router_xlwings.py  test_security_headers.py  test_serializers.py  test_static_files.py  test_user_model.py  test_xlwings_alert.py
xlwings_server/: .env.template  TODO.md  __init__.py  cli.py  config.py  dependencies.py  hotreload.py  main.py  object_handles.py  security_headers.json  security_headers.py  templates.py  utils.py
xlwings_server/azure_functions_templates/: .funcignore  function_app.py
xlwings_server/build_utils/: __init__.py  static_file_hasher.py
xlwings_server/custom_functions/: __init__.py  examples.py
xlwings_server/custom_scripts/: examples.py
xlwings_server/devcontainer_templates/: devcontainer.json
xlwings_server/docker_templates/: .dockerignore  Dockerfile  docker-compose.yaml
xlwings_server/models/: __init__.py  user.py
xlwings_server/routers/: manifest.py  root.py  socketio.py  taskpane.py  xlwings.py
xlwings_server/serializers/: __init__.py
xlwings_server/templates/: alert_base.html  base.html  manifest.xml  xlwings_alert.html
xlwings_server/wasm/: config.py  main.py  requirements.txt  wasm_runtime.py
(+93 files in other folders)
